--- a/home.html
+++ b/home.html
@@ -1570,7 +1570,7 @@ div.tocify {
 <p>Sugerencias y comentarios:</p>
 <ul>
 <li><p>por email a Juan Carlos Castillo, <a href="juancastillov@uchile.cl">juancastillov@uchile.cl</a> o Julio Iturra, <a href="julioiturrasanhueza@gmail.com">julioiturrasanhueza@gmail.com</a></p></li>
-<li><p>directamente en el repositorio de Github donde se encuentra alojado el observatorio, mediante fork y pull-request: <a href="https://github.com/jciturras/LAPOP_Iturra-observatorio_cohesion">https://github.com/jciturras/LAPOP_Iturra-observatorio_cohesion</a></p></li>
+<li><p>directamente en el repositorio de Github donde se encuentra alojado el observatorio, mediante fork y pull-request: <a href="https://github.com/jciturras/OCS-COES">https://github.com/jciturras/OCS-COES</a></p></li>
 </ul>
 </div>
 
